--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
 body {
-    background-color: aqua;
-    color: rgb(173, 24, 24);
+    background-color: rgb(172, 212, 28);
+    color: rgb(22, 172, 114);
 }
